# acpp

./: .gitignore  CMakeLists.txt  main.cpp
include/: buffers.hpp  camera.hpp  context.hpp  dir_light.hpp  fbo.hpp  frame_buffer.hpp  framebuffer.hpp  glfw.hpp  gls.hpp  lights.hpp  mesh.hpp  model.hpp  pt_light.hpp  shader.hpp  texture.hpp  tools.hpp
include/glad/: glad.h  glad.hpp
res/shader/: dir_light_pass.frag  dir_shadow.vert  gbuffer.frag  gbuffer.vert  gbuffer_s.vert  light.frag  light.vert  pt_light_pass.frag  pt_shadow.frag  pt_shadow.geom  pt_shadow.vert  render.frag  render.vert  screen.frag  screen.vert  skybox.frag  skybox.vert
res/shader/new/: dir_light_pass.frag  pt_light_pass.frag  pt_shadow.vert  screen.frag  shadow.vert
src/: context.cpp  defines.cpp  framebuffer.cpp  glad.cpp  texture.cpp
